src/objects/FieloPLT__AuditPermission__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>It enables you to control permissions granted throughout time.</description>
    <fields>
        <fullName>FieloPLT__From__c</fullName>
        <label>From</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>FieloPLT__GrantingUser__c</fullName>
        <label>Granting User</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloPLT__To__c</fullName>
        <label>To</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>FieloPLT__UserGranted__c</fullName>
        <label>User Granted</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>Audit Permissions</label>
</CustomObject>